# FinVault

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  README.md  package.json  render.yaml  replit.md
.github/: copilot-instructions.md
backend/: .gitignore  README.md  init_db.py  migrate_timezone.py  pyproject.toml  requirements.txt  run_tests.py  setup.cfg
backend/app/: database.py  main.py  security.py
backend/app/api/: admin.py  auth.py  behavior_profile.py  dashboard.py  geo.py  telemetry.py  transaction.py  util.py
backend/app/api/session_guardian/: session_guardian.py
backend/app/middlewares/: rbac.py  session_guardian.py
backend/app/models/: __init__.py  audit_log.py  session.py  transaction.py  user.py
backend/app/schemas/: __init__.py  admin.py  auth.py  behavior_profile.py  session.py  telemetry.py  transaction.py  transaction_flow.py  user.py
backend/app/services/: alert_service.py  audit_log_service.py  celery_app.py  drift_monitor.py  email_service.py  geoip.py  rate_limit.py  risk_engine.py  sms_service.py  tasks.py  telemetry_service.py  token_service.py
backend/tests/: README.md  conftest.py  test_audit_log_service.py  test_auth_api.py  test_email_service.py  test_jwt.py  test_jwt_auth.py  test_jwt_endpoints.py  test_response.py  test_risk_engine.py  test_telemetry_service.py
docs/: ADMIN_DASHBOARD.md  API.md  CLEANUP_CHECKLIST.md  CONFIG.md  HEALTH_CHECK_README.md  OPERATIONS.md  PROGRESS_REPORT.md  RISK_ENGINE.md  SECURITY.md  TELEMETRY.md  TESTING.md  api_specification.yaml
frontend/: package-lock.json  (+3 more)
(+45 files in other folders)
